--- a/app/src/main/res/layout/activity_record_audio_classify.xml
+++ b/app/src/main/res/layout/activity_record_audio_classify.xml
@@ -20,9 +20,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:text="分析结果(只保存识别结果大于0.8的数据)"/>
+            android:text="分析结果(仅保存识别结果大于0.90,分贝数大于-50的数据)"/>
         <TextView
             android:id="@+id/classify_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:text="none"/>
+        <TextView
+            android:id="@+id/decibels_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
