--- a/app/src/main/res/layout/activity_assets_audio_classfy.xml
+++ b/app/src/main/res/layout/activity_assets_audio_classfy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AssetsAudioClassify">
+    tools:context=".activity.AssetsAudioClassify">
 
     <TextView
         android:id="@+id/sample_text"
