--- a/app/src/main/res/layout/activity_chose_audio_file_classify.xml
+++ b/app/src/main/res/layout/activity_chose_audio_file_classify.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChoseAudioFileClassifyActivity"
+    tools:context=".activity.ChoseAudioFileClassifyActivity"
     android:orientation="vertical">
 
     <TextView
