--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,23 @@
             android:textColor="@color/black"
             android:textSize="18sp"/>
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEE"/>
 
+    <LinearLayout
+        android:id="@+id/file_nsx_agc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="批量降噪、自动增益"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -50,24 +66,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="选择APP内录制音频分析"
-            android:textColor="@color/black"
-            android:textSize="18sp"/>
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#EEE"/>
-
-    <LinearLayout
-        android:id="@+id/file_nsx_agc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="批量降噪、自动增益"
+            android:text="选择音频文件分析"
             android:textColor="@color/black"
             android:textSize="18sp"/>
     </LinearLayout>
@@ -85,6 +84,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="打开APP存储目录"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEE"/>
+
+    <LinearLayout
+        android:id="@+id/file_clear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="清除声音文件"
             android:textColor="@color/black"
             android:textSize="18sp"/>
     </LinearLayout>
