--- a/app/src/main/res/layout/activity_app_file.xml
+++ b/app/src/main/res/layout/activity_app_file.xml
@@ -7,6 +7,15 @@
     tools:context=".activity.AppFileActivity"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/file_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="文件总数"
+        android:layout_marginLeft="20dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
