--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="清除声音文件"
+            android:text="清除录音文件"
             android:textColor="@color/black"
             android:textSize="18sp"/>
     </LinearLayout>
