--- a/app/src/main/res/layout/activity_record_audio_classify.xml
+++ b/app/src/main/res/layout/activity_record_audio_classify.xml
@@ -22,6 +22,13 @@
             android:textSize="14sp"
             android:text="分析结果"/>
         <TextView
+            android:id="@+id/classify_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:text="none"/>
+        <TextView
             android:id="@+id/classify_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
