--- a/app/src/main/res/layout/activity_app_file.xml
+++ b/app/src/main/res/layout/activity_app_file.xml
@@ -12,9 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="文件总数"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="15dp"
         android:textColor="@color/black"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
